@@ -3,8 +3,8 @@ package com.czertainly.core.service.tsa.certificateprovider;
 import com.czertainly.api.exception.NotFoundException;
 import com.czertainly.api.interfaces.core.tsp.error.TspException;
 import com.czertainly.api.interfaces.core.tsp.error.TspFailureInfo;
+import com.czertainly.api.model.client.signing.profile.workflow.SigningWorkflowType;
 import com.czertainly.api.model.core.certificate.CertificateChainResponseDto;
-import com.czertainly.core.model.signing.scheme.ManagedSigning;
 import com.czertainly.core.model.signing.scheme.SigningSchemeModel;
 import com.czertainly.core.model.signing.scheme.StaticKeyManagedSigning;
 import com.czertainly.core.security.authz.SecuredUUID;
@@ -23,7 +23,6 @@ import java.util.UUID;
 @Component
 public class StaticManagedKeyCertificateProvider implements CertificateProvider {
 
-
     CertificateService certificateService;
 
     @Autowired
@@ -32,20 +31,34 @@ public class StaticManagedKeyCertificateProvider implements CertificateProvider 
     }
 
     @Override
-    public CertificateChain getCertificateChain(SigningSchemeModel signingScheme) throws TspException {
-        if (signingScheme instanceof StaticKeyManagedSigning staticKeyManagedSigning) {
-            UUID certificateUUID = staticKeyManagedSigning.certificate().getUuid();
-                return fetchCertificateChain(certificateUUID);
+    public boolean supports(SigningSchemeModel signingScheme) {
+        return signingScheme instanceof StaticKeyManagedSigning;
+    }
 
-        } else {
-            var className = signingScheme.getClass().getSimpleName();
-            throw new TspException(TspFailureInfo.SYSTEM_FAILURE, String.format("The signing scheme '%s' is not supported by 'StaticManagedKeyCertificateProvider'.", className), "The system is misconfigured.");
+    @Override
+    public void validate(SigningSchemeModel signingScheme, boolean qualifiedTimestamp) throws TspException {
+        if (!(signingScheme instanceof StaticKeyManagedSigning signingSchemeModel)) {
+            throw new TspException(TspFailureInfo.SYSTEM_FAILURE,
+                    String.format("The signing scheme '%s' is not supported by 'StaticManagedKeyCertificateProvider'.", signingScheme.getClass().getSimpleName()),
+                    "The system is misconfigured.");
+        }
+        if (!CertificateUtil.isCertificateDigitalSigningAcceptable(signingSchemeModel.certificate(), SigningWorkflowType.TIMESTAMPING, qualifiedTimestamp)) {
+            throw new TspException(TspFailureInfo.SYSTEM_FAILURE,
+                    "Signer certificate is not acceptable for %s timestamping".formatted(qualifiedTimestamp ? "qualified" : "non-qualified"),
+                    "Signer certificate failed validation.");
         }
     }
 
     @Override
-    public boolean supports(SigningSchemeModel signingScheme) {
-        return signingScheme instanceof StaticKeyManagedSigning;
+    public CertificateChain getCertificateChain(SigningSchemeModel signingScheme) throws TspException {
+        if (!(signingScheme instanceof StaticKeyManagedSigning signingSchemeModel)) {
+            throw new TspException(TspFailureInfo.SYSTEM_FAILURE,
+                    String.format("The signing scheme '%s' is not supported by 'StaticManagedKeyCertificateProvider'.", signingScheme.getClass().getSimpleName()),
+                    "The system is misconfigured.");
+        }
+
+        UUID certificateUUID = signingSchemeModel.certificate().getUuid();
+        return fetchCertificateChain(certificateUUID);
     }
 
     private CertificateChain fetchCertificateChain(UUID certificateUUID) throws TspException {
@@ -53,7 +66,9 @@ public class StaticManagedKeyCertificateProvider implements CertificateProvider 
         try {
             certificateChainDto = certificateService.getCertificateChain(SecuredUUID.fromUUID(certificateUUID), true);
         } catch (NotFoundException e) {
-            throw new TspException(TspFailureInfo.SYSTEM_FAILURE, String.format("Failed to obtain certificate chain. %s", e.getLocalizedMessage()), "Signing key certificate could not be found.");
+            throw new TspException(TspFailureInfo.SYSTEM_FAILURE,
+                    String.format("Failed to obtain certificate chain. %s", e.getLocalizedMessage()),
+                    "Signing key certificate could not be found.");
         }
         List<X509Certificate> chain = new ArrayList<>();
         for (var dto : certificateChainDto.getCertificates()) {
@@ -66,7 +81,9 @@ public class StaticManagedKeyCertificateProvider implements CertificateProvider 
         try {
             return CertificateUtil.getX509Certificate(base64);
         } catch (CertificateException e) {
-            throw new TspException(TspFailureInfo.SYSTEM_FAILURE, String.format("Failed to decode certificate '%s' (serial: %s) from chain. %s", commonName, serialNumber, e.getLocalizedMessage()), "Certificate chain could not be parsed.");
+            throw new TspException(TspFailureInfo.SYSTEM_FAILURE,
+                    String.format("Failed to decode certificate '%s' (serial: %s) from chain. %s", commonName, serialNumber, e.getLocalizedMessage()),
+                    "Certificate chain could not be parsed.");
         }
     }
 }
